--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "bootstrap": "^5.3.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "~0.14.3",
+    "json-server": "^0.17.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.0.6",
